Defined leading planing group